--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ p {
   font-weight: 100;
   line-height: 1.6em;
   width: 22em;
+  padding-bottom: 16px;
 }
 
 button {
@@ -54,12 +55,20 @@ button {
     inset 0 0 7px 2px rgba(0,208,255, 0.6);
   }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 825px) {
         h1 {
             width: 11em;
             font-size: 2.1em;
-            padding-top: 340px;
+            padding-top: 380px;
         }
+
+@media screen and (max-width: 600px) {
+                h1 {
+                    width: 11em;
+                    font-size: 2.1em;
+                    padding-top: 320px;
+                }
+
 
 @media screen and (max-width: 600px) {
     p {
