--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,69 @@ Footer {
   height: 240px;
 }
 
+nav {
+  position: fixed;
+  right: 0;
+  top: 0;
+  float: right;
+  padding-right: 6em;
+  padding-top: 8em;
+  background-color: #1e1d28;
+}
+
+li {
+  display: block;
+  text-transform: uppercase;
+  color: #f5f5f5;
+  font-size: .8em;
+  text-align: left;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  padding: 8px;
+  letter-spacing: .2em;
+}
+
+li:hover {
+  color: #57fff2;
+  transition: .6s;
+  text-shadow:
+    0 1px 4px #57fff2;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    font-family: Rubik;
+    font-weight: 300;
+}
+
 #logo {
   height: 240px;
   position: absolute;
   padding-top: 120px;
+}
+
+button {
+    cursor: pointer;
+    display: inline-block;
+    background-color: #1e1d28;
+    color: #57fff2;
+    border: 2px solid #57fff2;
+    border-radius: 4px;
+    font-size: 1em;
+    padding: 1em;
+}
+
+button:hover {
+    cursor: pointer;
+    display: inline-block;
+    background-color: #57fff2;
+    color: #1e1d28;
+    border: 2px solid #1e1d28;
+    border-radius: 4px;
+    font-size: 1em;
+    padding: 1em;
+    transition: .3s;
 }
 
 h1 {
@@ -19,9 +78,18 @@ h1 {
   font-size: 3em;
   text-align: left;
   font-family: 'Rubik', sans-serif;
-  font-weight: 700;
-  width: 16em;
+  font-weight: 500;
+  width: 14em;
   padding-top: 400px;
+}
+
+h4 {
+  color: white;
+  font-size: 1.6em;
+  text-align: left;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  width: 14em;
 }
 
 p {
@@ -32,43 +100,11 @@ p {
   font-weight: 100;
   line-height: 1.6em;
   width: 22em;
-  padding-bottom: 16px;
+  padding-bottom: 20px;
+  font-weight: 100;
 }
 
-button {
-  padding: 1rem 1.25rem;
-  font-family: 'Rubik', sans-serif;
-  font-size: 1.4rem;
-  text-decoration: none;
-  text-shadow:
-    -2px 4px 4px #091243,
-    0 0 10px #00D0FF,
-    inset 1px 1px 1px white;
-  color: #57fff2;
-  border: 2px solid;
-  border-radius: 3px;
-  background-color: transparent;
-  box-shadow:
-    0 1px 2px rgba(0,0,0, 0.6),
-    2px 1px 4px rgba(0,0,0, 0.3),
-    2px 4px 3px rgba(3,0,128, 0.3),
-    0 0 7px 2px rgba(0,208,255, 0.6),
-    inset 0 1px 2px rgba(0,0,0, 0.6),
-    inset 2px 1px 4px rgba(0,0,0, 0.3),
-    inset 2px 4px 3px rgba(3,0,128, 0.3),
-    inset 0 0 7px 2px rgba(0,208,255, 0.6);
-  }
 
-  button:hover {
-    padding: 1rem 1.25rem;
-    font-family: 'Rubik', sans-serif;
-    font-size: 1.4rem;
-    text-decoration: none;
-    transition: .2s;
-    color: #1e1d28;
-    border-radius: 3px;
-    background-color: #57fff2;
-    }
 
 @media screen and (max-width: 825px) {
         h1 {
