--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ nav {
   right: 0;
   top: 0;
   float: right;
-  padding-right: 2em;
-  padding-top: 1em;
+  padding-right: 2.4em;
+  padding-top: 1.2em;
   background-color: #1e1d28;
 }
 
@@ -25,8 +25,8 @@ li {
   font-size: .8em;
   text-align: left;
   font-family: 'Rubik', sans-serif;
-  font-weight: 400;
-  padding: 8px;
+  font-weight: 300;
+  padding: 16px;
   letter-spacing: .2em;
   cursor: pointer;
 }
@@ -49,8 +49,6 @@ li a.active {
   position: absolute;
   padding-top: 120px;
 }
-
-
 
 a {
     text-decoration: none;
@@ -131,26 +129,24 @@ p {
             width: 11em;
             font-size: 2.1em;
             padding-top: 380px;
+            font-family: 'Rubik', sans-serif;
+            font-weight: 500;
         }
-
-@media screen and (max-width: 600px) {
-                h1 {
-                    width: 11em;
-                    font-size: 2.1em;
-                    padding-top: 320px;
-                }
 
 @media screen and (max-width: 600px) {
     p {
         width: 18em;
     }
-
-@media screen and (max-width: 600px) {
-            #logo {
-              height: 180px;
-              position: absolute;
-              padding-top: 120px;
-            }
+    #logo {
+      height: 180px;
+      position: absolute;
+      padding-top: 120px;
+    }
+    h1 {
+        width: 11em;
+        font-size: 2.1em;
+        padding-top: 320px;
+    }
 
 @media screen and (max-width: 400px) {
                             h1 {
