--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
+
+html{ height:100%; }
+
 body {
   background-color: #1e1d28;
   padding-left: 10%;
   padding-right: 10%;
-}
-
-Footer {
-  height: 240px;
+  min-height:100%; position:relative;
 }
 
 nav {
@@ -13,20 +13,27 @@ nav {
   right: 0;
   top: 0;
   float: right;
-  padding-right: 2.4em;
+  padding-right: 2em;
   padding-top: 1.2em;
-  background-color: #1e1d28;
+  background: rgba(30,29,40,0.85);
+}
+
+footer {
+  position:absolute;
+  width:100%;
+  height:100px;
+  padding-top: 64px;
 }
 
 li {
   display: block;
   text-transform: uppercase;
-  color: #f5f5f5;
+  color: #eae9e8;
   font-size: .8em;
   text-align: left;
   font-family: 'Rubik', sans-serif;
   font-weight: 300;
-  padding: 16px;
+  padding: 1em;
   letter-spacing: .2em;
   cursor: pointer;
 }
@@ -102,7 +109,7 @@ h2 {
 }
 
 h4 {
-  color: white;
+  color: #eae9e8;
   font-size: 1.6em;
   text-align: left;
   font-family: 'Rubik', sans-serif;
@@ -113,9 +120,8 @@ h4 {
 p {
   color: #eae9e8;
   text-align: left;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'helvetica', sans-serif;
   font-size: 1.2em;
-  font-weight: 100;
   line-height: 1.6em;
   width: 22em;
   padding-bottom: 20px;
