--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 
-html{ height:100%; }
+html{ height:100%;
+  overflow: hidden;
+}
 
 body {
   background-color: #1e1d28;
@@ -15,14 +17,12 @@ nav {
   float: right;
   padding-right: 2em;
   padding-top: 1.2em;
-  background: rgba(30,29,40,0.85);
 }
 
 footer {
   position:absolute;
   width:100%;
   height:100px;
-  padding-top: 64px;
 }
 
 li {
@@ -134,7 +134,34 @@ p {
   font-weight: 100;
 }
 
+img.homepage {
+  position: absolute;
+  height: 100%;
+  right: -640px;
+  top: -36px;
+  z-index: -1;
+  opacity: .4;
+}
 
+@media screen and (max-width: 1440px) {
+                img.homepage {
+                  position: absolute;
+                  height: 100%;
+                  right: -600px;
+                  top: -36px;
+                  z-index: -1;
+                  opacity: .4;
+                }
+
+                @media screen and (max-width: 1080px) {
+                                img.homepage {
+                                  position: absolute;
+                                  height: 100%;
+                                  right: -700px;
+                                  top: -36px;
+                                  z-index: -1;
+                                  opacity: .25;
+                                }
 
 @media screen and (max-width: 825px) {
         h1 {
@@ -144,6 +171,15 @@ p {
             font-family: 'Rubik', sans-serif;
             font-weight: 500;
         }
+        @media screen and (max-width: 1080px) {
+                        img.homepage {
+                          position: absolute;
+                          height: 100%;
+                          right: -888px;
+                          top: -20px;
+                          z-index: -1;
+                          opacity: .16;
+                        }
 
 @media screen and (max-width: 600px) {
     p {
@@ -166,3 +202,4 @@ p {
                                 font-size: 1.8em;
                                 padding-top: 320px;
                             }
+                            
