--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ li {
   color: #eae9e8;
   font-size: .8em;
   text-align: left;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Palanquin Dark', sans-serif;
   font-weight: 300;
   padding: 1em;
   letter-spacing: .2em;
@@ -65,8 +65,8 @@ li a.active {
 a {
     text-decoration: none;
     color: inherit;
-    font-family: Rubik;
-    font-weight: 300;
+    font-family: 'Palanquin Dark', sans-serif;
+    font-weight: 400;
     cursor: pointer;
 }
 
@@ -98,18 +98,19 @@ h1 {
   color: #57fff2;
   font-size: 3.4em;
   text-align: left;
-  font-family: 'Rubik', sans-serif;
-  font-weight: 700;
+  font-family: 'Palanquin Dark', sans-serif;
+  font-weight: 600;
   width: 14em;
   padding-top: 320px;
+  line-height: 1.4em;
 }
 
 h2 {
   color: #57fff2;
   font-size: 2em;
   text-align: left;
-  font-family: 'Rubik', sans-serif;
-  font-weight: 500;
+  font-family: 'Palanquin Dark', sans-serif;
+  font-weight: 400;
   width: 14em;
   padding-top: 400px;
 }
@@ -118,7 +119,7 @@ h4 {
   color: #eae9e8;
   font-size: 1.6em;
   text-align: left;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Palanquin Dark', sans-serif;
   font-weight: 400;
   width: 14em;
 }
@@ -168,7 +169,7 @@ img.homepage {
             width: 11em;
             font-size: 2.5em;
             padding-top: 315px;
-            font-family: 'Rubik', sans-serif;
+            font-family: 'Palanquin Dark', sans-serif;
             font-weight: 500;
         }
         @media screen and (max-width: 1080px) {
@@ -202,4 +203,3 @@ img.homepage {
                                 font-size: 1.8em;
                                 padding-top: 320px;
                             }
-                            
