--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ img.homepage {
             width: 11em;
             font-size: 2.5em;
             padding-top: 315px;
-            font-family: 'Palanquin Dark', sans-serif;
+            font-family: 'IBM Plex Sans', sans-serif;
             font-weight: 500;
         }
         @media screen and (max-width: 1080px) {
@@ -186,11 +186,13 @@ img.homepage {
     p {
         width: 18em;
     }
+
     #logo {
       height: 180px;
       position: absolute;
       padding-top: 120px;
     }
+
     h1 {
         width: 11em;
         font-size: 2.1em;
