--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   min-height:100%; position:relative;
+  height:100%;
+  overflow: hidden;
 }
 
 nav {
