--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ li {
   display: block;
   text-transform: uppercase;
   color: #eae9e8;
-  font-size: .8em;
+  font-size: 1em;
   text-align: left;
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 300;
@@ -103,7 +103,7 @@ h1 {
   font-weight: 600;
   width: 14em;
   padding-top: 320px;
-  line-height: 1.4em;
+  line-height: 1.2em;
 }
 
 h2 {
