--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   min-height:100%; position:relative;
+  overflow: scroll;
 }
 
 nav {
@@ -155,7 +156,7 @@ img.homepage {
                   opacity: .4;
                 }
 
-                @media screen and (max-width: 1080px) {
+@media screen and (max-width: 1080px) {
                                 img.homepage {
                                   position: absolute;
                                   height: 100%;
@@ -173,7 +174,8 @@ img.homepage {
             font-family: 'IBM Plex Sans', sans-serif;
             font-weight: 500;
         }
-        @media screen and (max-width: 1080px) {
+        
+@media screen and (max-width: 1080px) {
                         img.homepage {
                           position: absolute;
                           height: 100%;
