--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 html{ height:100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -8,7 +8,6 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   min-height:100%; position:relative;
-  overflow: scroll;
 }
 
 nav {
