--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 html{ height:100%;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 body {
@@ -8,6 +9,7 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   min-height:100%; position:relative;
+  over
 }
 
 nav {
